# povertybets

./: .gitignore  Cargo.toml  build.rs  games.txt
src/: compare.rs  fightcade.rs  main.rs  template.rs
templates/: template.html
