[package]
name = "povertybets"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
askama = "0.12"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
open = "5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
winres = "0.1"
